Fix spacing for choices button in modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,6 +282,7 @@ https://www.w3schools.com/howto/howto_css_modals.asp */
     border-radius: 10px;
     cursor: pointer;
     font-weight: bolder;
+    margin: 1rem auto;
 }
 
 /* Hover effect with description of image */
